fixed navbar style=z-index

--- a/src/component/navbar/style.css
+++ b/src/component/navbar/style.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-content: space-around;
     top:0;
+    z-index: 99;
 }
 
 input {
